--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,5 +81,9 @@
         "xelatex"
         ]
     }
-    ]      
+    ],
+    "cSpell.words": [
+        "microcontroller",
+        "microcontrollers"
+    ]
 }
