Never compile Latex on every save -_-....

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,5 +85,6 @@
     "cSpell.words": [
         "microcontroller",
         "microcontrollers"
-    ]
+    ],
+    "latex-workshop.latex.autoBuild.run": "never"
 }
