Advanced the Hardware chapter;

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,7 +84,8 @@
     ],
     "cSpell.words": [
         "microcontroller",
-        "microcontrollers"
+        "microcontrollers",
+        "verilog"
     ],
     "latex-workshop.latex.autoBuild.run": "never"
 }
