--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,8 +36,8 @@
             "env": {}
         },
         {
-            "name": "bibtex",
-            "command": "bibtex",
+            "name": "biber",
+            "command": "biber",
             "args": [
             "%DOCFILE%"
             ],
@@ -64,19 +64,19 @@
         ]
     },
     {
-        "name": "pdflatex ➞ bibtex ➞ pdflatex`×2",
+        "name": "pdflatex ➞ biber ➞ pdflatex`×2",
         "tools": [
         "pdflatex",
-        "bibtex",
+        "biber",
         "pdflatex",
         "pdflatex"
         ]
     },
     {
-    "name": "xelatex ➞ bibtex ➞ xelatex`×2",
+    "name": "xelatex ➞ biber ➞ xelatex`×2",
     "tools": [
         "xelatex",
-        "bibtex",
+        "biber",
         "xelatex",
         "xelatex"
         ]
